@@ -1,2 +1,0 @@
-class Admin::LineItemsController < Admin::ApplicationController
-end
