@@ -1,2 +1,0 @@
-class Admin::OrdersController < Admin::ApplicationController
-end
