@@ -1,5 +1,7 @@
 New in 0.1.0:
 
+* Improvement: Generate a single controller to serve all resources,
+  to reduce noise after running the install generator.
 * Improvement: Add `Administrate::Field::DateTime`
   for displaying dates, times, and datetimes.
 * Improvement: Add `Administrate::Field::Number`
